--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ServiceTech">
-        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".TechRegActivity"></activity>
+        <activity android:name=".HomeActivity" />
         <activity android:name=".SignInActivity" />
         <activity android:name=".LogInActivity" />
         <activity android:name=".MainActivity">
