--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -30,6 +31,7 @@ android {
 
 dependencies {
 
+    implementation 'com.google.firebase:firebase-database:19.5.1'
     def appcompat_version = "1.2.0"
 
     implementation "androidx.appcompat:appcompat:1.2.0"
