--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
    // implementation 'com.google.firebase:firebase-auth:9.6.1'
     implementation 'com.google.firebase:firebase-database:19.5.1'
     implementation 'com.google.firebase:firebase-storage:19.2.0'
+    implementation 'com.google.firebase:firebase-auth:20.0.1'
     def appcompat_version = "1.2.0"
 
     // Stripe Android SDK
@@ -55,4 +56,4 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
-apply plugin: 'com.google.gms.google-services'
+ apply plugin: 'com.google.gms.google-services'
