--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.application'
-    id 'com.google.gms.google-services'
+//    id 'com.google.gms.google-services'
 }
 android {
     compileSdkVersion 29
@@ -34,14 +34,14 @@ dependencies {
     // Declare the dependency for the Realtime Database library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-database'
-   // implementation 'com.google.firebase:firebase-auth:9.6.1'
     implementation 'com.google.firebase:firebase-database:19.5.1'
-    implementation 'com.google.firebase:firebase-storage:19.2.0'
-    implementation 'com.google.firebase:firebase-auth:20.0.1'
+   // implementation 'com.google.firebase:firebase-storage:19.2.0'
+   // implementation 'com.google.firebase:firebase-auth:20.0.1'
     def appcompat_version = "1.2.0"
 
     // Stripe Android SDK
-    // implementation 'com.stripe:stripe-android:16.1.1'
+    implementation 'com.stripe:stripe-android:16.1.1'
+    implementation 'com.stripe:stripe-java:1.47.0'
 
     implementation "androidx.appcompat:appcompat:1.2.0"
     // For loading and tinting drawables on older versions of the platform
@@ -49,10 +49,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-
-    //Butterknife
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     //dexter permissions
     implementation "com.karumi:dexter:5.0.0"
@@ -70,10 +66,12 @@ dependencies {
 
     implementation 'com.github.yalantis:ucrop:2.2.2'
 
+    //implementation 'com.android.support:multidex:2.0.1'
+
     implementation project(':mysql-connector-java-8.0.22')
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
- apply plugin: 'com.google.gms.google-services'
+ //apply plugin: 'com.google.gms.google-services'
