--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.application'
-//    id 'com.google.gms.google-services'
+    id 'com.google.gms.google-services'
 }
 android {
     compileSdkVersion 29
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.servicetech"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -29,14 +29,17 @@ android {
 }
 
 dependencies {
+
     // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:26.1.1')
     // Declare the dependency for the Realtime Database library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.firebase:firebase-database:19.5.1'
-   // implementation 'com.google.firebase:firebase-storage:19.2.0'
-   // implementation 'com.google.firebase:firebase-auth:20.0.1'
+    implementation 'com.google.firebase:firebase-storage:19.2.0'
+    implementation 'com.google.firebase:firebase-auth:20.0.1'
+    implementation 'com.google.firebase:firebase-core:17.0.0'
+    implementation 'com.google.firebase:firebase-firestore:20.1.0'
     def appcompat_version = "1.2.0"
 
     // Stripe Android SDK
@@ -57,13 +60,15 @@ dependencies {
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
 
     //Glide
+    /*
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'com.github.bumptech.glide:annotations:4.7.1'
     implementation('com.github.bumptech.glide:okhttp3-integration:4.0.0') {
         exclude group: 'glide-parent'
     }
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
-
+     */
+    
     implementation 'com.github.yalantis:ucrop:2.2.2'
 
     //implementation 'com.android.support:multidex:2.0.1'
@@ -74,4 +79,4 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
- //apply plugin: 'com.google.gms.google-services'
+ apply plugin: 'com.google.gms.google-services'
