--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity android:name=".TechnicianActivity" />
         <activity android:name=".TechRegActivity" />
         <activity android:name=".HomeActivity" />
+        <activity android:name=".SettingsActivity" />
         <activity android:name=".SignInActivity" />
         <activity android:name=".LogInActivity" />
         <activity android:name=".MainActivity">
