--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         <activity android:name=".TechRegActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".SettingsActivity" />
-        <activity android:name=".SignInActivity" />
+        <activity android:name=".RegisterActivity" />
         <activity android:name=".LogInActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
