--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,12 +41,13 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.3.0')
     // Declare the dependency for the Realtime Database library
     // When using the BoM, you don't specify versions in Firebase library dependencies
+
     implementation 'com.google.firebase:firebase-database'
-    implementation 'com.google.firebase:firebase-database:19.5.1'
-    implementation 'com.google.firebase:firebase-storage'
-    implementation 'com.google.firebase:firebase-auth'
+    //implementation 'com.google.firebase:firebase-database:19.6.0'
+    implementation 'com.google.firebase:firebase-storage:19.2.1'
+    implementation 'com.google.firebase:firebase-auth:20.0.2'
     implementation 'com.google.firebase:firebase-core'
-    implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.firebase:firebase-firestore:22.0.1'
 
     implementation 'com.stripe:stripe-android:16.1.1'
     implementation 'com.stripe:stripe-java:1.47.0'
