--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,10 +32,13 @@ dependencies {
     implementation "androidx.appcompat:appcompat:1.2.0"
     implementation "androidx.appcompat:appcompat-resources:1.2.0"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
+  //  implementation 'com.android.support:design:24.0.0'
+    implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
     implementation 'com.github.yalantis:ucrop:2.2.2'
+
+//    implement 'com.google.api-client:google-api-client:1.23.0'
 
     // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:26.3.0')
@@ -43,7 +46,7 @@ dependencies {
     // When using the BoM, you don't specify versions in Firebase library dependencies
 
     implementation 'com.google.firebase:firebase-database'
-    //implementation 'com.google.firebase:firebase-database:19.6.0'
+    implementation 'com.google.firebase:firebase-database:19.6.0'
     implementation 'com.google.firebase:firebase-storage:19.2.1'
     implementation 'com.google.firebase:firebase-auth:20.0.2'
     implementation 'com.google.firebase:firebase-core'
