--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ServiceTech">
+        <activity android:name=".TechLogInActivity" />
         <activity android:name=".TechnicianActivity" />
         <activity android:name=".TechRegActivity" />
         <activity android:name=".HomeActivity" />
