--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,10 @@ dependencies {
   //  implementation 'com.android.support:design:24.0.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+//    implementation 'com.androidx.support:cardview-v7:28.0.0'
+//    implementation 'com.androidx.support:recyclerview-v7:28.0.0'
+
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
     implementation 'com.github.yalantis:ucrop:2.2.2'
 
