--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-core'
     implementation 'com.google.firebase:firebase-firestore:22.0.1'
 
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
     implementation 'com.stripe:stripe-android:16.1.1'
     implementation 'com.stripe:stripe-java:1.47.0'
     implementation "com.karumi:dexter:5.0.0"
