--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,8 +59,11 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 
-    implementation 'com.stripe:stripe-android:16.1.1'
+
+    // Stripe Android SDK
+    implementation 'com.stripe:stripe-android:16.4.0'
     implementation 'com.stripe:stripe-java:1.47.0'
+    
     implementation "com.karumi:dexter:5.0.0"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
