--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,38 +36,33 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-//    implementation 'com.androidx.support:cardview-v7:28.0.0'
 //    implementation 'com.androidx.support:recyclerview-v7:28.0.0'
 
-    implementation 'com.mikhaellopez:circularimageview:3.2.0'
-    implementation 'com.github.yalantis:ucrop:2.2.2'
 
 //    implement 'com.google.api-client:google-api-client:1.23.0'
 
-    // Import the BoM for the Firebase platform
-    implementation platform('com.google.firebase:firebase-bom:26.3.0')
-    // Declare the dependency for the Realtime Database library
-    // When using the BoM, you don't specify versions in Firebase library dependencies
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:28.0.1')
 
-    implementation 'com.google.firebase:firebase-database'
-    implementation 'com.google.firebase:firebase-database:19.6.0'
+    // When using the BoM, don't specify versions in Firebase dependencies
+    implementation 'com.google.firebase:firebase-analytics'
+
+    implementation 'com.google.firebase:firebase-database:20.0.0'
     implementation 'com.google.firebase:firebase-storage:19.2.1'
     implementation 'com.google.firebase:firebase-auth:20.0.2'
     implementation 'com.google.firebase:firebase-core'
     implementation 'com.google.firebase:firebase-firestore:22.0.1'
 
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-
-
-    // Stripe Android SDK
-    implementation 'com.stripe:stripe-android:16.4.0'
-    implementation 'com.stripe:stripe-java:1.47.0'
-    
-    implementation "com.karumi:dexter:5.0.0"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    implementation 'com.github.bumptech.glide:annotations:4.7.1'
+    implementation('com.github.bumptech.glide:okhttp3-integration:4.0.0') {
+        exclude group: 'glide-parent'
+    }
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
