--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,14 +32,12 @@ dependencies {
     implementation "androidx.appcompat:appcompat:1.2.0"
     implementation "androidx.appcompat:appcompat-resources:1.2.0"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-  //  implementation 'com.android.support:design:24.0.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-//    implementation 'com.androidx.support:recyclerview-v7:28.0.0'
-
 
     implementation "com.github.parse-community.Parse-SDK-Android:parse:1.26.0"
+	implementation 'com.github.parse-community.ParseUI-Android:widget:0.0.6'
 
 //    implement 'com.google.api-client:google-api-client:1.23.0'
 
@@ -49,15 +47,10 @@ dependencies {
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation 'com.google.firebase:firebase-analytics'
 
-    implementation 'com.google.firebase:firebase-database:20.0.0'
-    implementation 'com.google.firebase:firebase-storage:20.0.0'
-    implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.firebase:firebase-auth:21.0.1'
-    implementation 'com.google.firebase:firebase-core'
-    implementation 'com.google.firebase:firebase-firestore:23.0.0'
-
+    
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+	
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.7.1'
